# build-summary

./: README.md  pyproject.toml
src/summary/: __main__.py
